NL_NNLT/Ass2/upload/src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'<>'", "'='", "'<'", "'>'", 
                     "'<='", "'>='", "'['", "']'", "':'", "'('", "')'", 
                     "';'", "'..'", "','", "'{'", "'}'", "':='" ]

    symbolicNames = [ "<INVALID>", "BOOL_LIT", "COMMENT1", "COMMENT2", "COMMENT3", 
                      "WS", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", "FALSE", 
                      "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "NOT", "AND", "OR", "DIV", "MOD", "WITH", "ADD", "SUB", 
                      "MUL", "DIVISION", "NOTEQ", "EQ", "LESS", "GREATER", 
                      "LEQ", "GEQ", "LSB", "RSB", "COLON", "LB", "RB", "SEMI", 
                      "DD", "COMMA", "LK", "RK", "ASSIGN", "IDENTIFIER", 
                      "INT_LIT", "REAL_LIT", "STRING_LIT", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_list_vardecl = 2
    RULE_type_a = 3
    RULE_primitive_type = 4
    RULE_compound_type = 5
    RULE_func_decl = 6
    RULE_listpara = 7
    RULE_proc_decl = 8
    RULE_statement = 9
    RULE_match_statement = 10
    RULE_other = 11
    RULE_assignment_state = 12
    RULE_while_state = 13
    RULE_for_state = 14
    RULE_break_state = 15
    RULE_continue_state = 16
    RULE_return_state = 17
    RULE_with_state = 18
    RULE_call_state = 19
    RULE_unmatch_statement = 20
    RULE_comp_statement = 21
    RULE_expression = 22
    RULE_expression1 = 23
    RULE_expression2 = 24
    RULE_expression3 = 25
    RULE_expression4 = 26
    RULE_expression5 = 27
    RULE_expression6 = 28
    RULE_literal = 29
    RULE_index_expression = 30
    RULE_list_expression = 31
    RULE_lhs = 32

    ruleNames =  [ "program", "var_decl", "list_vardecl", "type_a", "primitive_type", 
                   "compound_type", "func_decl", "listpara", "proc_decl", 
                   "statement", "match_statement", "other", "assignment_state", 
                   "while_state", "for_state", "break_state", "continue_state", 
                   "return_state", "with_state", "call_state", "unmatch_statement", 
                   "comp_statement", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "literal", "index_expression", "list_expression", "lhs" ]

    EOF = Token.EOF
    BOOL_LIT=1
    COMMENT1=2
    COMMENT2=3
    COMMENT3=4
    WS=5
    BREAK=6
    CONTINUE=7
    FOR=8
    TO=9
    DOWNTO=10
    DO=11
    IF=12
    THEN=13
    ELSE=14
    RETURN=15
    WHILE=16
    BEGIN=17
    END=18
    FUNCTION=19
    PROCEDURE=20
    VAR=21
    TRUE=22
    FALSE=23
    ARRAY=24
    OF=25
    REAL=26
    BOOLEAN=27
    INTEGER=28
    STRING=29
    NOT=30
    AND=31
    OR=32
    DIV=33
    MOD=34
    WITH=35
    ADD=36
    SUB=37
    MUL=38
    DIVISION=39
    NOTEQ=40
    EQ=41
    LESS=42
    GREATER=43
    LEQ=44
    GEQ=45
    LSB=46
    RSB=47
    COLON=48
    LB=49
    RB=50
    SEMI=51
    DD=52
    COMMA=53
    LK=54
    RK=55
    ASSIGN=56
    IDENTIFIER=57
    INT_LIT=58
    REAL_LIT=59
    STRING_LIT=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Func_declContext)
            else:
                return self.getTypedRuleContext(MPParser.Func_declContext,i)


        def proc_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Proc_declContext)
            else:
                return self.getTypedRuleContext(MPParser.Proc_declContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 66
                    self.var_decl()
                    pass
                elif token in [MPParser.FUNCTION]:
                    self.state = 67
                    self.func_decl()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 68
                    self.proc_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 73
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def list_vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.List_vardeclContext)
            else:
                return self.getTypedRuleContext(MPParser.List_vardeclContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MPParser.VAR)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.list_vardecl()
                self.state = 77
                self.match(MPParser.SEMI)
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENTIFIER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_vardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_a(self):
            return self.getTypedRuleContext(MPParser.Type_aContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_list_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_vardecl" ):
                return visitor.visitList_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def list_vardecl(self):

        localctx = MPParser.List_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(MPParser.IDENTIFIER)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 84
                self.match(MPParser.COMMA)
                self.state = 85
                self.match(MPParser.IDENTIFIER)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(MPParser.COLON)
            self.state = 92
            self.type_a()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_aContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def compound_type(self):
            return self.getTypedRuleContext(MPParser.Compound_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_type_a

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_a" ):
                return visitor.visitType_a(self)
            else:
                return visitor.visitChildren(self)




    def type_a(self):

        localctx = MPParser.Type_aContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_a)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.compound_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INT_LIT)
            else:
                return self.getToken(MPParser.INT_LIT, i)

        def DD(self):
            return self.getToken(MPParser.DD, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUB)
            else:
                return self.getToken(MPParser.SUB, i)

        def getRuleIndex(self):
            return MPParser.RULE_compound_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_type" ):
                return visitor.visitCompound_type(self)
            else:
                return visitor.visitChildren(self)




    def compound_type(self):

        localctx = MPParser.Compound_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compound_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MPParser.ARRAY)
            self.state = 101
            self.match(MPParser.LSB)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 102
                self.match(MPParser.SUB)


            self.state = 105
            self.match(MPParser.INT_LIT)
            self.state = 106
            self.match(MPParser.DD)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 107
                self.match(MPParser.SUB)


            self.state = 110
            self.match(MPParser.INT_LIT)
            self.state = 111
            self.match(MPParser.RSB)
            self.state = 112
            self.match(MPParser.OF)
            self.state = 113
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_a(self):
            return self.getTypedRuleContext(MPParser.Type_aContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def listpara(self):
            return self.getTypedRuleContext(MPParser.ListparaContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def comp_statement(self):
            return self.getTypedRuleContext(MPParser.Comp_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MPParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MPParser.FUNCTION)
            self.state = 116
            self.match(MPParser.IDENTIFIER)
            self.state = 117
            self.match(MPParser.LB)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 118
                self.listpara()


            self.state = 121
            self.match(MPParser.RB)
            self.state = 122
            self.match(MPParser.COLON)
            self.state = 123
            self.type_a()
            self.state = 124
            self.match(MPParser.SEMI)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 125
                self.var_decl()


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.BEGIN:
                self.state = 128
                self.comp_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListparaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.List_vardeclContext)
            else:
                return self.getTypedRuleContext(MPParser.List_vardeclContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_listpara

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListpara" ):
                return visitor.visitListpara(self)
            else:
                return visitor.visitChildren(self)




    def listpara(self):

        localctx = MPParser.ListparaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listpara)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.list_vardecl()
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 132
                    self.match(MPParser.SEMI)
                    self.state = 133
                    self.list_vardecl() 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Proc_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def listpara(self):
            return self.getTypedRuleContext(MPParser.ListparaContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def comp_statement(self):
            return self.getTypedRuleContext(MPParser.Comp_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proc_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProc_decl" ):
                return visitor.visitProc_decl(self)
            else:
                return visitor.visitChildren(self)




    def proc_decl(self):

        localctx = MPParser.Proc_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_proc_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MPParser.PROCEDURE)
            self.state = 140
            self.match(MPParser.IDENTIFIER)
            self.state = 141
            self.match(MPParser.LB)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 142
                self.listpara()


            self.state = 145
            self.match(MPParser.RB)
            self.state = 146
            self.match(MPParser.SEMI)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 147
                self.var_decl()


            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.BEGIN:
                self.state = 150
                self.comp_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def match_statement(self):
            return self.getTypedRuleContext(MPParser.Match_statementContext,0)


        def unmatch_statement(self):
            return self.getTypedRuleContext(MPParser.Unmatch_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.unmatch_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Match_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MPParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def match_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Match_statementContext)
            else:
                return self.getTypedRuleContext(MPParser.Match_statementContext,i)


        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def other(self):
            return self.getTypedRuleContext(MPParser.OtherContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_match_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatch_statement" ):
                return visitor.visitMatch_statement(self)
            else:
                return visitor.visitChildren(self)




    def match_statement(self):
